--- a/js/components/Cell/style.sass
+++ b/js/components/Cell/style.sass
@@ -3,3 +3,9 @@
   height: 50px
   border: 1px solid #000
   cursor: pointer
+
+.cell--cross
+  background: black
+
+.cell--nought
+  background: white
